--- a/style.css
+++ b/style.css
@@ -463,3 +463,120 @@ height: 2rem;
     margin-left: 2.9rem;
     font-size: .8rem;
 }
+
+/*SECTION 4*/
+
+.section__4{
+    display: grid;
+    grid-template-rows: min-content min-content  ;
+    grid-template-columns: 15rem 30rem 15rem 40rem;
+}
+
+.cars{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+
+.cars__car{
+    height: 100%;
+    width: 70%;
+}
+
+.cars__online{
+    grid-column: 3/-1;
+    grid-row: 1/2;
+}
+
+.cars__online-car{
+    height: 100%;
+    width: 72%;
+}
+
+.cars__background{
+    grid-column: 2/4;
+    grid-row: 1/2;
+    background-color: #FF6433;
+    height: 100%;
+    padding: 4rem;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    z-index: 1;
+}
+
+.cars__heading{
+    color: white;
+    font-size: 2rem;
+    width: 80%;
+    margin-bottom: 1.5rem;
+}
+
+.cars__experience{
+    grid-column: 1/-1;
+    grid-row: 2/3;
+    background-color: #F2F2F2;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2rem;
+}
+
+.cars__review{
+    display: flex;
+    flex-direction: column;
+}
+
+.review__heading{
+    color: #661CE7;
+    font-size: 1.9rem;
+    padding-bottom: .7rem;
+}
+
+.cars__button{
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background-color: black;
+    padding: .6rem;
+    color: white;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.section__5{
+    background-color: #FAFAFA;
+    display: grid;
+    grid-template-rows: 10rem 15rem 2rem ;
+    grid-template-columns: 10rem 64rem 10rem;
+}
+
+.brands{
+    grid-row: 1/2;
+    grid-column: 2/3;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.brands__heading{
+    font-size: 2rem;
+}
+.brands__image{
+    grid-row: 2/3;
+    grid-column: 2/3;
+
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-items: center;
+    justify-content: center;
+}
+.brands__pix{
+    width: 9rem;
+}
