--- a/media.css
+++ b/media.css
@@ -117,6 +117,11 @@
 }
 
 @media only screen and (max-width: 31.25em) {
+  html,
+  body {
+    font-size: 80%;
+  }
+
   .navigation__button {
     height: 3.5rem;
     width: 3.5rem;
