--- a/queries.css
+++ b/queries.css
@@ -482,7 +482,7 @@
   }
 
   .section__1 {
-    grid-template-columns: minmax(0.1rem, 12rem) minmax(21rem, 25rem) minmax(
+    grid-template-columns: minmax(0.1rem, 12rem) minmax(23rem, 27rem) minmax(
         0.1rem,
         12rem
       );
@@ -536,7 +536,7 @@
     grid-row: 2/-1;
     margin-left: -1rem;
     justify-content: start;
-    padding-left: 6rem;
+    padding-left: 5rem;
   }
 
   .review__heading,
@@ -562,7 +562,7 @@
     background-color: #f2f2f2;
     display: grid;
     grid-template-rows: 18rem 31rem 7rem 4rem;
-    grid-template-columns: minmax(0.1rem, 10rem) 38rem minmax(0.1rem, 10rem);
+    grid-template-columns: minmax(0.1rem, 10rem) 50rem minmax(0.1rem, 10rem);
   }
   .testimonial__line {
     margin-left: 2rem;
@@ -579,6 +579,7 @@
 
   .testimonial__carousel {
     margin-top: -3.5rem;
+    margin-left: 4rem;
   }
 
   .section__7 {
