--- a/media.css
+++ b/media.css
@@ -18,10 +18,60 @@
     font-size: 1rem;
   }
 
+  .finsweet__img {
+    height: 100%;
+    width: 100%;
+  }
+
+  .finsweet__img-group {
+    grid-column: 1/-1;
+    grid-row: 1/-1;
+    padding-left: 0rem;
+  }
+
+  .cars__background {
+    grid-column: 2/4;
+    grid-row: 3/4;
+    background-color: transparent;
+  }
+  .cars__heading {
+    font-size: 3.2rem;
+    margin-bottom: 1.7rem;
+  }
+
+  .cars__paragraph {
+    color: white;
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+  }
+
   .footer {
     display: grid;
     grid-template-columns: minmax(0.5rem, 9rem) 20rem 20rem minmax(0.5rem, 9rem);
     grid-template-rows: 6rem 18rem 6rem;
+  }
+
+  .diagnostics {
+    display: grid;
+    grid-template-columns:
+      minmax(0.1rem, 0rem) minmax(16rem, 19rem) minmax(11rem, 15rem)
+      0rem;
+    grid-template-rows: 6rem 30rem 3rem;
+    grid-gap: 1rem;
+    background-color: #f5f5f5;
+  }
+
+  .diagnostics__page1 {
+    padding: 2.5rem 2.5rem;
+  }
+
+  .problems__image {
+    display: flex;
+  }
+
+  .problem__images-1,
+  .problem__images-2 {
+    width: 9rem;
   }
 }
 
@@ -70,6 +120,15 @@
   .navigation__icon::after {
     top: 0.7rem;
   }
+
+  .diagnostics__img {
+    grid-template-columns: repeat(2, minmax(10rem, 13rem));
+  }
+
+  .work__images-1,
+  .work__images-2 {
+    width: 9rem;
+  }
 }
 
 @media only screen and (max-width: 43.75em) {
@@ -87,6 +146,55 @@
 
   .navigation__img {
     width: 2rem;
+  }
+
+  .cars__background {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+
+  .cars__paragraph {
+    font-size: 1.1rem;
+  }
+
+  .cars__heading {
+    font-size: 2.2rem;
+  }
+
+  .diagnostics__page1 {
+    grid-row: 2/3;
+    grid-column: 2/4;
+  }
+
+  .diagnostics__img {
+    grid-row: 3/4;
+    grid-column: 2/4;
+    justify-content: center;
+  }
+
+  .diagnostics {
+    grid-template-rows: 6rem 30rem 30rem 3rem;
+  }
+
+  .work {
+    grid-template-columns:
+      minmax(0.5rem, 10rem) minmax(20rem, 28rem) minmax(20rem, 28rem)
+      minmax(0.5rem, 10rem);
+    grid-template-rows: 6rem 20rem 16rem;
+  }
+
+  .work__images {
+    grid-row: 3/4;
+    grid-column: 2/-1;
+    display: flex;
+    padding-left: 2rem;
+  }
+
+  .work__follow {
+    grid-row: 2/3;
+    grid-column: 2/4;
+    width: 70%;
+    padding-left: 1rem;
   }
 
   .footer {
@@ -113,6 +221,37 @@
     flex-direction: column;
     align-items: flex-start;
     padding-left: 1rem;
+  }
+
+  .work__images-1,
+  .work__images-2 {
+    width: 12rem;
+  }
+
+  .problem__diagnostics {
+    grid-row: 2/3;
+    grid-column: 1/4;
+    width: 90%;
+    padding-left: 1rem;
+  }
+
+  .problems__image {
+    grid-row: 3/4;
+    grid-column: 2/4;
+    padding-left: 2rem;
+  }
+
+  .problems {
+    grid-template-columns:
+      minmax(0.5rem, 10rem) minmax(20rem, 28rem) minmax(20rem, 28rem)
+      minmax(0.5rem, 10rem);
+    grid-template-rows: 6rem 17rem 20rem;
+  }
+
+  .problem__images-1,
+  .problem__images-2 {
+    width: 12rem;
+    height: 16rem;
   }
 }
 
@@ -141,6 +280,40 @@
     width: 2rem;
     top: 1.7rem;
     right: 1.7rem;
+  }
+
+  .diagnostics {
+    display: grid;
+    grid-template-columns:
+      minmax(0.1rem, 0rem) minmax(4rem, 10rem) minmax(2rem, 14rem)
+      0rem;
+  }
+
+  .work {
+    grid-template-columns:
+      minmax(0.5rem, 10rem) minmax(18rem, 28rem) minmax(16rem, 28rem)
+      minmax(0.5rem, 10rem);
+    grid-template-rows: 5rem 21rem 16rem;
+  }
+
+  .work__images {
+    padding-left: 0.5rem;
+  }
+
+  .work__images-1,
+  .work__images-2 {
+    width: 11rem;
+  }
+
+  .problems {
+    grid-template-columns:
+      minmax(0.5rem, 10rem) minmax(14rem, 28rem) minmax(18rem, 28rem)
+      minmax(0.5rem, 10rem);
+    grid-template-rows: 5rem 21rem 20rem;
+  }
+
+  .problems__image {
+    padding-left: 0.5rem;
   }
 
   .footer {
